--- a/templates/blog/post.erb
+++ b/templates/blog/post.erb
@@ -2,8 +2,12 @@
 title:      <%= title %>
 created_at: <%= Time.now.to_y %>
 blog_post:  true
+sitemap:    true
+priority:   0.5
 filter:
   - textile
+tags:
+  - a_tag
 --- 
 
 post contents....
