--- a/content/index.erb
+++ b/content/index.erb
@@ -3,6 +3,8 @@ title:      Home
 created_at: 2009-04-14 16:37:30.924536 +01:00
 filter:     erb
 dirty:      true
+sitemap:    true
+priority:   1.0
 ---
 
 <%= render :partial => '/blog_roll' %>
