--- a/templates/blog/month.erb
+++ b/templates/blog/month.erb
@@ -4,5 +4,7 @@ created_at:     <%= Time.now.to_y %>
 filter:         erb
 dirty:          true
 show_heading:   true
+sitemap:        true
+priority:       0.3
 ---
 <%= render :partial => '/blog_roll' %>
