atom feed added

--- a/layouts/default.erb
+++ b/layouts/default.erb
@@ -9,6 +9,8 @@ filter:    erb
   <title>roovo:web &raquo; <%= @page.title.downcase %></title>
   <meta name="author" content="<%= @page.author %>" />
 
+  <link rel="alternate"  type="application/rss+xml" title="roovo blog" href="atom.xml" />
+
   <link rel="stylesheet" type="text/css" href="/css/reset.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/css/text.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/css/960.css" media="screen" />
