added author to all pages

--- a/templates/blog/post.erb
+++ b/templates/blog/post.erb
@@ -1,9 +1,10 @@
 --- 
-title:      <%= title %>
-created_at: <%= Time.now.to_y %>
-blog_post:  true
-sitemap:    true
-priority:   0.5
+title:          <%= title %>
+created_at:     <%= Time.now.to_y %>
+author:         roovo
+blog_post:      true
+sitemap:        true
+priority:       0.5
 filter:
   - textile
 tags:
