--- a/templates/blog/year.erb
+++ b/templates/blog/year.erb
@@ -1,6 +1,7 @@
 ---
 title:          "Archives: <%= Time.now.strftime('%Y') %>"
 created_at:     <%= Time.now.to_y %>
+author:         roovo
 filter:         erb
 dirty:          true
 show_heading:   true
