--- a/templates/tags/tag_index.erb
+++ b/templates/tags/tag_index.erb
@@ -1,7 +1,8 @@
 ---
 title:          "Tagged With: <%= tag %>"
-show_heading:   true
 created_at:     <%= Time.now.to_y %>
+author:         roovo
+show_heading:   true
 tag:            <%= tag %>
 filter:         haml
 sitemap:        true
