google analytics added

--- a/layouts/default.erb
+++ b/layouts/default.erb
@@ -48,5 +48,6 @@ filter:    erb
     </div>
     <div class="clear"></div>
   </div>
+  <%= render :partial => '/google_analytics' %>
 </body>
 </html>
