rss moved to feedburner

--- a/layouts/default.erb
+++ b/layouts/default.erb
@@ -9,7 +9,7 @@ filter:    erb
   <title>roovo:web &raquo; <%= @page.title.downcase %></title>
   <meta name="author" content="<%= @page.author %>" />
 
-  <link rel="alternate"  type="application/rss+xml" title="roovo blog" href="atom.xml" />
+  <link rel="alternate"  type="application/rss+xml" title="roovo blog" href="http://feeds2.feedburner.com/roovo" />
 
   <link rel="stylesheet" type="text/css" href="/css/reset.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="/css/text.css" media="screen" />
