--- a/content/css/layout.sass
+++ b/content/css/layout.sass
@@ -67,6 +67,12 @@ h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover
 hr
   :margin-bottom          0.3em
 
+blockquote
+  :font-family            Georgia, 'Times New Roman', serif
+  :padding-left           1em
+  :border-left            4px solid #ccc
+
+
 // ********************************
 // *********** header *************
 // ********************************
