--- a/content/css/layout.sass
+++ b/content/css/layout.sass
@@ -1,46 +1,39 @@
----
-extension:  css
-filter:     sass
-layout:     nil   # no layout
-dirty:      true
----
-
-!aqua_blue        = #6FA2AE
-!darkened_aqua    = #43778F
-!rusty_orange     = #E87830
-!darkened_orange  = #D36A2D
-!light_grey       = #999999
-!super_light_grey = #F3F3FA
+$aqua_blue: #6FA2AE
+$darkened_aqua: #43778F
+$rusty_orange: #E87830
+$darkened_orange: #D36A2D
+$light_grey: #999999
+$super_light_grey: #F3F3FA
 
 // ********************************
 // *********** colors *************
 // ********************************
 body
-  :border-top=              10px solid !aqua_blue
+  :border-top=              10px solid $aqua_blue
   :padding                  0 0 5px
 a, a:focus
-  :color=                   !aqua_blue
+  :color=                   $aqua_blue
   
 a:hover
-  :color=                   !darkened_aqua
+  :color=                   $darkened_aqua
 
 h1, h2, h3, h4, h5, h6
-  :color=                   !rusty_orange
+  :color=                   $rusty_orange
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a
-  :color=                   !rusty_orange
+  :color=                   $rusty_orange
 
 h1 a:hover, h2 a:hover, h3 a:hover, h4 a:hover, h5 a:hover, h6 a:hover
-  :color=                   !darkened_orange
+  :color=                   $darkened_orange
 
 h1#branding
-  :color=                   !aqua_blue
+  :color=                   $aqua_blue
 
 h1#branding a
-  :color=                   !aqua_blue
+  :color=                   $aqua_blue
 
 h1#branding a:hover
-  :color=                   !darkened_aqua
+  :color=                   $darkened_aqua
 
 // *********************************
 // *********** general *************
@@ -89,12 +82,12 @@ h1#branding
 // *********** posts **************
 // ********************************
 .post
-  :border-left=             2px solid !aqua_blue
+  :border-left=             2px solid $aqua_blue
   :padding-left             1em
   :margin-bottom            2em
 
   .post-info
-    :color=                 !light_grey
+    :color=                 $light_grey
     :background-image       url("/images/decor/underline1.jpg")
     :background-repeat      no-repeat
     :background-position    0% 100%
@@ -106,10 +99,10 @@ h1#branding
 // ********************************
 .side-box
   :font-size                0.9em
-  :background-color=        !super_light_grey
+  :background-color=        $super_light_grey
   :margin-bottom            1em
   :padding-left             5px
-  :color=                    !light_grey
+  :color=                    $light_grey
 
   .corner-top div
     :background               url("/images/decor/corner_tl.png") no-repeat top left
