--- a/content/_projects.erb
+++ b/content/_projects.erb
@@ -3,14 +3,18 @@ filter:   erb
 ---
 
 <% sidebar_box "Projects" do %>
-  <h4><%= link_to 'DataMapper Form Friendly Integer', 'http://github.com/roovo/dm-form_friendly_integer' %></h4>
+  <h4><%= link_to 'Felixstowe Port Twitter Bot', 'http://github.com/roovo/felixstowe_port_twitter_bot' %></h4>
   <p>
-    A variant of the DataMapper Integer type which
-    is well behaved when used with html forms.
+    A page scraping twitter bot that tweets ship arrivals and departures.
   </p>
   <h4><%= link_to 'Virgin Movies Twitter Bot', 'http://github.com/roovo/virgin_movies_twitter_bot' %></h4>
   <p>
     A page scraping twitterer to keep me posted on
     what's coming up on Virgins On Demand movies.
+  </p>
+  <h4><%= link_to 'DataMapper Form Friendly Integer', 'http://github.com/roovo/dm-form_friendly_integer' %></h4>
+  <p>
+    <strong>This was for an old version of datamapper</strong>. A variant of the DataMapper Integer type which
+    is well behaved when used with html forms.
   </p>
 <% end %>
