update copyright in footer

--- a/layouts/default.erb
+++ b/layouts/default.erb
@@ -43,7 +43,7 @@ filter:    erb
     <div class="clear"></div>
     <div class="grid_16 footer">
       <hr />
-      <p>&copy; roovo 2009 : using <a href="http://webby.rubyforge.org">webby</a></p>
+      <p>&copy; roovo 2009 - 2010 : using <a href="http://webby.rubyforge.org">webby</a></p>
       <%= render :partial => '/disqus_comment_count' %>
     </div>
     <div class="clear"></div>
